# vive-file-viewer

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  Cargo.toml  LICENSE  README.md  README_ja.md  SECURITY.md  cliff.toml  config.toml.example  release.toml
.github/workflows/: release.yml
completions/: _vfv  vfv.bash  vfv.fish
docs/: README.md  USAGE.md
src/: app.rs  config.rs  editor.rs  file_browser.rs  main.rs  preview.rs  search.rs  ui.rs
tests/: cli_integration.rs
