[package]
name = "vive-file-viewer"
version = "0.1.0"
edition = "2024"
description = "A fast terminal file viewer with fuzzy search and syntax highlighting"
authors = ["noumi0k"]
license = "MIT"
repository = "https://github.com/noumi0k/vive-file-viewer"
keywords = ["cli", "terminal", "file-viewer", "tui", "fuzzy-search"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "vfv"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
syntect = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
directories = "5"
ignore = "0.4"
nucleo-matcher = "0.3"
clap = { version = "4.5.57", features = ["derive"] }
serde_json = "1.0.149"
indicatif = "0.18.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
